Fullstack/frontend/src/styles/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--text);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* Default Light Theme */
:root {
  --text: #0F1014;
  --lighttext: #444444;
  --inverttext: white;

  --background: #F4F4F6;
  --border: #d9d9d9;
  --card: white;
  --tintcard: #FCFCFD;
  --darkcard: #ebebeb;
  

  --primary: #6971A9;
  --secondary: #C2B1CB;
  --lightsecondary: #E8E0EC;
  
  --accent: #b7bbd2;

  
  --primary-hover: #5B6291;
  --secondary-hover: #B2A3BA;
  --lightsecondary-hover: #D7D0DB;

  --button: #F5F5F5;
  --buttonhover: #e0e0e0;

  --light-green: #A8E6A2;
  --light-green-hover: #9AD194;

  --green: #4CAF50;
  --darkgreenbutton: #388E3C;
  
  --light-red: #F8BFBF;
  --light-red-hover: #E2B1B1;

  --red: #F44336;
  --darkredbutton: #D32F2F;
}

/* Dark Theme */
[data-theme="dark"] {
  --text: #eaeaea;
  --lighttext: #bbbbbb;
  --inverttext: black;
  
  --background: #181818;
  --border: #5c5c5c;
  --card: #313131;
  --tintcard: #252525;
  --darkcard: #3D3D3D;

  --button: #3c3c3c;
  --buttonhover: #4c4c4c;

  --primary: #565d95;
  --secondary: #867491;
  --lightsecondary: #3a2f3e;

  --accent: #474f7b;


  --primary-hover: #49507F;
  --secondary-hover: #73657C;
  --lightsecondary-hover: #C0B7C9;


  --light-green: #2E6B32;
  --light-green-hover: #96CC90;

  --green: #3D8B40;

  --light-red: #A52A24;
  --light-red-hover: #932420;


  --red: #D43729;

  
}

